--- a/css/template.css
+++ b/css/template.css
@@ -161,20 +161,61 @@ a:focus {
     min-height: 100%;
     overflow: hidden; /* hidden scrollbar in firefox */
     padding-top: 8.5em;
-    background: url("../assets/backgrounds/sunset.JPG") no-repeat center;
+    background: url("../assets/backgrounds/sunset.JPG") fixed center;
     background-size: cover;
+    position: relative;
     text-align: center;
     font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
     font-weight: 300;
     color: #fff;
 }
 
-.home-section .container {
+.home-section > .container {
     height: auto !important;
+    position: relative;
+    background: inherit;
+    background-attachment: fixed;
 }
 
-.home-section h1 {
+.home-section > .container > .welcome-box {
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    background: inherit;
+    background-attachment: fixed;
+}
+
+.home-section > .container > .welcome-box::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0097A7;
+    border-radius: 0.5em;
+    box-shadow: 0 0 36px rgba(0, 0, 0, .8);
+    /*box-shadow: 0 0 30px 5px #1fbcd2;
+    background-attachment: fixed;
+    filter: blur(12px);
+    transform: translateY(20px);*/
+}
+
+.home-section > .container > .welcome-box > p {
+    color: #ffffff;
+    position: relative;
+    z-index: 1;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.home-section > h1 {
     font-size: 3em;
+    text-shadow: 0 0 18px rgba(0, 0, 0, .8);
 }
 
 .home-section article {
@@ -184,13 +225,6 @@ a:focus {
 .home-section article {
     padding: 0.4em;
     margin-top: 0.4em;
-}
-
-.welcome-box {
-    max-width: 100%;
-    max-height: 100%;
-    color: #212121;
-    background-color: rgba(178, 235, 242, 0.8);
 }
 
 .welcome-box > p {
