--- a/css/template.css
+++ b/css/template.css
@@ -92,12 +92,15 @@ a:focus {
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
     color: #FFC107;
     background-color: #00BCD4;
+
 }
 
 .navbar-default .navbar-nav > li > a {
     color: #FFC107;
     letter-spacing: 0.03em;
     font-size: 1em;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
@@ -196,7 +199,7 @@ a:focus {
     height: 100%;
     background-color: #0097A7;
     border-radius: 0.5em;
-    box-shadow: 0 0 36px rgba(0, 0, 0, .8);
+    box-shadow: 0 0 36px rgba(0, 0, 0, .75);
     /*box-shadow: 0 0 30px 5px #1fbcd2;
     background-attachment: fixed;
     filter: blur(12px);
@@ -209,13 +212,9 @@ a:focus {
     z-index: 1;
 }
 
-* {
-    box-sizing: border-box;
-}
-
 .home-section > h1 {
     font-size: 3em;
-    text-shadow: 0 0 18px rgba(0, 0, 0, .8);
+    text-shadow: 0 0 18px rgba(0, 0, 0, .75);
 }
 
 .home-section article {
