--- a/css/template.css
+++ b/css/template.css
@@ -128,9 +128,9 @@ a:focus {
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border-color: #B2EBF2;
 }
-/*  ========================================
-    settings for section small, big & island
-    ========================================  */
+/*  =============================
+        settings for sections
+    =============================  */
 
 .bold-text {
     font-size: 1.25em;
@@ -153,6 +153,13 @@ a:focus {
 
 .big-text {
     margin-bottom: 0.6em;
+}
+
+section > h1 {
+    font-size: 3em;
+    text-shadow: 0 0 18px rgba(0, 0, 0, .75);
+    text-align: center;
+    color: #fff;
 }
 
 /*  ========================================
@@ -212,16 +219,8 @@ a:focus {
     z-index: 1;
 }
 
-.home-section > h1 {
-    font-size: 3em;
-    text-shadow: 0 0 18px rgba(0, 0, 0, .75);
-}
-
 .home-section article {
     font-size: 1.5em;
-}
-
-.home-section article {
     padding: 0.4em;
     margin-top: 0.4em;
 }
@@ -238,31 +237,66 @@ a:focus {
 .small-section {
     height: auto !important;
     min-height: 100%;
-    overflow: hidden;
+    overflow: hidden; /* hidden scrollbar in firefox */
     padding-top: 8.5em;
-    background: url("../assets/backgrounds/horizon.jpg") no-repeat center;
+    background: url("../assets/backgrounds/horizon.jpg") fixed center;
     background-size: cover;
+    position: relative;
+    text-align: center;
     font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
     font-weight: 300;
-    color: #212121;
-}
-
-.small-section h1 {
-    font-size: 3em;
-    text-align: center;
     color: #fff;
 }
 
-.small-section .container {
+.small-section > .container {
     height: auto !important;
+    position: relative;
+    background: inherit;
+    background-attachment: fixed;
+}
+
+.small-section > .container > .row {
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    background: inherit;
+    background-attachment: fixed;
+    margin:0;
+    overflow: hidden;
+    background-color: #0097A7;
+    border-radius: 0.5em;
+    box-shadow: 0 0 36px rgba(0, 0, 0, .75);
+}
+
+.small-section > .container > .row::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /*box-shadow: 0 0 30px 5px #1fbcd2;
+    background-attachment: fixed;
+    filter: blur(12px);
+    transform: translateY(20px);*/
+}
+
+.small-section > .container > .row > .small-box {
+    background-color: #0097A7;
 }
 
 .small-text {
     max-width: 100%;
     max-height: 100%;
-    font-size: 1.25em;
-    background-color: rgba(178, 235, 242, 0.7);
+    font-size: 1.5em;
     padding: 0.4em;
+}
+
+.small-text > p {
+    margin: 0.1em;
+    padding: 0.1em;
 }
 
 /*  ========================================
@@ -274,29 +308,64 @@ a:focus {
     min-height: 100%;
     overflow: hidden;
     padding-top: 8.5em;
-    background: url("../assets/backgrounds/horizon.jpg") no-repeat center;
+    background: url("../assets/backgrounds/horizon.jpg") fixed center;
     background-size: cover;
     font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
     font-weight: 300;
-    color: #212121;
-}
-
-.big-section h1 {
-    font-size: 3em;
+    position: relative;
     text-align: center;
     color: #fff;
 }
 
-.big-section .container {
+.big-section > .container {
     height: auto !important;
+    position: relative;
+    background: inherit;
+    background-attachment: fixed;
+}
+
+.big-section > .container > .row {
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    background: inherit;
+    background-attachment: fixed;
+    margin:0;
+    overflow: hidden;
+    background-color: #0097A7;
+    border-radius: 0.5em;
+    box-shadow: 0 0 36px rgba(0, 0, 0, .75);
+}
+
+.big-section > .container > .row::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /*box-shadow: 0 0 30px 5px #1fbcd2;
+    background-attachment: fixed;
+    filter: blur(12px);
+    transform: translateY(20px);*/
+}
+
+.big-section > .container > .row > .big-box {
+    background-color: #0097A7;
 }
 
 .big-text {
     max-width: 100%;
     max-height: 100%;
-    font-size: 1.25em;
-    background-color: rgba(178, 235, 242, 0.7);
+    font-size: 1.5em;
     padding: 0.4em;
+}
+
+.big-text > p {
+    margin: 0.1em;
+    padding: 0.1em;
 }
 
 /*  ========================================
@@ -304,34 +373,68 @@ a:focus {
     ========================================  */
 
 .island-section {
-    height: auto !important;
-    min-height: 100%;
+    height: 100% !important;
     overflow: hidden;
     padding-top: 8.5em;
-    background: url("../assets/backgrounds/otokvirbackgroundbnw2blur.jpg") no-repeat center;
+    background: url("../assets/backgrounds/sunset.JPG") fixed center;
     background-size: cover;
     font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
     font-weight: 300;
-    color: #212121;
-}
-
-.island-section h1 {
-    font-size: 3em;
+    position: relative;
     text-align: center;
     color: #fff;
 }
 
-.island-section .container {
-    height: auto !important;
+.island-section > .container {
+    height: 74.14%;
+    position: relative;
+    background: inherit;
+    background-attachment: fixed;
+}
+
+.island-section > .container > .row {
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    background: inherit;
+    background-attachment: fixed;
+    margin:0;
+    overflow: hidden;
+    background-color: #0097A7;
+    border-radius: 0.5em;
+    box-shadow: 0 0 36px rgba(0, 0, 0, .75);
+}
+
+.island-section > .container > .row::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /*box-shadow: 0 0 30px 5px #1fbcd2;
+    background-attachment: fixed;
+    filter: blur(12px);
+    transform: translateY(20px);*/
+}
+
+.island-section > .container > .row > .island-box {
+    background-color: #0097A7;
 }
 
 .island-text {
     max-width: 100%;
-    max-height: 24.5em;
-    font-size: 1.25em;
-    background-color: rgba(178, 235, 242, 0.7);
+    max-height: 100%;
+    font-size: 1.5em;
     padding: 0.4em;
     overflow: auto;
+}
+
+.island-text > p {
+    margin: 0.1em;
+    padding: 0.1em;
 }
 
 /*  ========================================
@@ -377,8 +480,8 @@ h2.heading-line span {
 
 .contact-text {
     min-width: 100%;
-    height: 15em;
-    font-size: 1em;
+    height: auto;
+    font-size: 1.05em;
     text-align: center;
     padding: 0.4em;
 }
@@ -407,7 +510,7 @@ h2.heading-line span {
 }
 
 .social_box > p > a > i {
-    font-size: 150%;
+    font-size: 175%;
     color: #fff;
 }
 
@@ -475,7 +578,17 @@ hr {
 }
 
 /*  ========================================
-                media query
+                    footer
+    ========================================  */
+
+footer {
+    text-align: center;
+    font-weight: 300;
+    color: #ffffff;
+}
+
+/*  ========================================
+                  media query
     ========================================  */
 
 @media (min-width: 768px) {
@@ -505,20 +618,12 @@ hr {
         justify-content: center;
     }
 
-    .small-box {
-        padding: 0;
-    }
-
-    .big-box {
+    .small-box, .big-box, .island-box {
         padding: 0;
     }
 
     .big-text {
         margin: 0;
-    }
-
-    .island-box {
-        padding: 0;
     }
 
     .picture img {
